# Zaphod

./: CMakeLists.txt  Camera.cpp  Camera.h  Colour.cpp  Colour.h  Lightsource.cpp  Lightsource.h  Object.cpp  Object.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec.cpp  Vec.h  Vector.cpp  Vector.h  intersect.cpp  main.cpp  scene.cpp  scene.h  test.cpp  testintersection.cpp
